--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
+  data:
+    redis:
+      host: localhost
+      port: 6380
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: localhost:9093
     consumer:
       auto-offset-reset: latest
       group-id: notify
@@ -21,7 +25,21 @@ spring:
     show-sql: true
   application:
     name: BAND-NOTIFY-SERVICE
+
 server:
-  port: 8081
+  port: 9000
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,beans,refresh
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
 
 
