--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
     name: BAND-NOTIFY-SERVICE
 
 server:
-  port: 9000
+  port: 9100
 
 management:
   endpoints:
@@ -39,6 +39,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+    enabled: false
   instance:
     instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
 
