--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
       host: localhost
       port: 6380
   kafka:
-    bootstrap-servers: localhost:9093
+    bootstrap-servers: 34.42.237.145:9093
     consumer:
       auto-offset-reset: latest
       group-id: notify
@@ -16,7 +16,7 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
   datasource:
-    url: jdbc:mysql://localhost:3306/notify?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://34.42.237.145:3306/notify?serverTimezone=Asia/Seoul
     username: root
     password: 1234
   jpa:
@@ -27,19 +27,19 @@ spring:
     name: BAND-NOTIFY-SERVICE
 
 server:
-  port: 9100
+  port: 8000
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,beans,refresh
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: health,beans,refresh
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
-  instance:
-    instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
-
+#eureka:
+#  client:
+#    serviceUrl:
+#      defaultZone: http://localhost:8761/eureka
+#  instance:
+#    instanceId: ${spring.application.name}:${vcap.application.instance_id:${spring.application.instance_id:${random.value}}}
+#
 
