--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,9 @@ repositories {
 	mavenCentral()
 }
 
-ext {
-	set('springCloudVersion', "2022.0.4")
-}
+//ext {
+//	set('springCloudVersion', "2022.0.4")
+//}
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -43,18 +43,18 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-data-redis"
 
 	// eureka
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+//	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-dependencyManagement {
-	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-	}
-}
+//dependencyManagement {
+//	imports {
+//		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+//	}
+//}
 
 
 tasks.named('test') {
